@@ -9,6 +9,7 @@
 \alias{makeRnk}
 \alias{diffTable,CuffData-method}
 \alias{makeRnk,CuffData-method}
+\alias{annotation,CuffData-method}
 
 \title{Class "CuffData"}
 \description{
@@ -35,6 +36,7 @@ Objects can be created by calls of the form \code{new("CuffData", DB, tables, fi
     \item{DB}{\code{signature(object = "CuffData")}: Accessor for @DB slot }
     \item{diffTable}{\code{signature(object = "CuffData")}: Create a Full table (wide format) of differential expression information for all pairwise comparisons }
     \item{makeRnk}{\code{signature(object = "CuffData")}: Internal method to create .rnk file. Should not be called directly }	
+    \item{annotation}{\code{signature(object="CuffData")}: Access annotation data}
 	 }
 }
 \references{
